--- a/一些常识/一些好习惯.md
+++ b/一些常识/一些好习惯.md
@@ -1,15 +1,16 @@
 # 一些好习惯
 
-* 刷题 
-  * 实际上，只要还在互联网行业总是会反复遇到那堆算法题， 这些算法题中的思想，出现在计算机领域的任何一个角落，是一个必须翻越的山丘⛰️。
+> 能够相信的，其实只有努力。
+
+* 刷题实际上，只要还在互联网行业总是会反复遇到那堆算法题， 这些算法题中的思想，出现在计算机领域的任何一个角落，是一个必须翻越的山丘⛰️。
 * 背英语
 * 做计划
+* 锻炼身体
 
 ### Attention
 
 > 还有一些最好自己想清楚的东西
 
-1. 自己的退路是什么？如果本科没达到自己的期望，能去哪里？实际上永远会有退路。
+1. 自己的退路是什么？如果本科没达到自己的期望，能去哪里？实际上永远会有退路，最差就是大厂程序员咯~(开玩笑)。
 2. 自己生活中的最主要矛盾是什么？
 3. 理想中的生活需要自己具备怎么样的能力，你是否做好成为一个**职业**程序员，一个**职业**的科研人员的准备。
-
