--- a/一些常识/普遍存在的一些问题.md
+++ b/一些常识/普遍存在的一些问题.md
@@ -1,26 +1,26 @@
 # 普遍存在的一些问题
 
+这些问题，确实为现状，我们接受这些现状，也要知道解决办法。
+
 ### 培养方案
 
 培养方案的槽点主要在于，啥都要学，尤其是信息大类、高等理工学院这些骚操作。
 
+* 面对不合理的培养方案，避重就轻会是比较好的策略。保证重课高分。
+
 ### 校医院
 
-校医院不作为已经不是一两天，正经看病让校医院开转诊单吧, 对了12月份那段时间是财务清算的时间，学生的医保报销需要第二年才能办理，别问我怎么知道的。
+* 校医院毕竟是校医院，正经看病让校医院开转诊单吧。
+* 对了12月份那段时间是财务清算的时间，学生的医保报销需要第二年才能办理。
 
 ### 后勤问题
 
-宿管大爷，宿管阿姨通常都挺NICE的，
+宿管大爷，宿管阿姨通常都挺NICE的
 
-不过如果你有需求要去调宿舍，哈哈哈。
-
-### 领导们没有问题 
+* 调宿舍特别麻烦，当时宿舍床位是划归不同院系的，所以尽可能院系内部调换。
 
 ### 氛围问题
 
 永恒的内卷，实际上，我们需要找到自己的排解压力的方式，学会调节自己，否则真的会被压垮，交点好朋友，培养个小爱好。
 
 > 如果抑郁的话，比如笔者大一的时候就挺抑郁的，找个靠谱的心理咨询吧。学校那个不知道现在work不work。
-
-
-
