--- a/一些常识/课内压力.md
+++ b/一些常识/课内压力.md
@@ -1,22 +1,15 @@
----
-description: 适应了之后，其实也还好。
----
-
 # 课内压力
 
 北航的课业压力，如何和别的工科学校相比较的话，那么确实算是强度比较大的，特别对于大学才接触计算机的同学来说。
 
-然而经历过大学四年的洗礼后，回头看，其实也就那样。每个学期基本上会有一两门比较重的课，其他的课基本都比较水。大一是数学，高等代数和数学分析，大二是计算机核心课程，计算机组成原理，面向对象，操作系统，大三是编译原理，计算机网络，大四是毕业设计。选课上记得： **选最少的课、刷最高的GPA、培养自己的技术栈、感兴趣的课可以去旁听、组队和大佬、熟人组队**。:\(🩸血的教训: \)  。以及， **不论如何， 请学会刷题**，这是一项重要的技能，现实世界中，人的精力有限，没那么重要的课，就用刷题代替钻研。
+然而经历过大学四年的洗礼后，回头看，其实也就那样。适应了每周的学习节奏之后，基本上不会有什么大问题。特别是在假期如果做好预习，那么那个学期的重课基本上就稳了，很多东西其实不是我们学不会， 只是之前没有见过， 短时间内去学巨量的东西容易出问题。
 
-适应了每周的学习节奏之后，基本上不会有什么大问题。特别是在假期如果做好预习，那么那个学期的重课基本上就稳了， **很多东西其实不是我们学不会， 只是之前没有见过， 短时间内去学巨量的东西容易出问题**。重课通常会耗费我们一周大多数的时间，在每个夜晚对这些核心孜孜不倦的研究，构成了我们对计算机本质最深刻的理解，这是我们，作为计算机科班出生，所获得的核心竞争力。
+* 每个学期基本上会有一两门比较重的课，其他的课基本都比较水。大一是数学，高等代数和数学分析，大二是计算机核心课程，计算机组成原理，面向对象，操作系统，大三是编译原理，计算机网络，大四是毕业设计。
+* 选课上记得： **选最少的课、刷最高的GPA、培养自己的技术栈、感兴趣的课可以去旁听、组队和大佬、熟人组队**。:\(🩸血的教训: \)  。以及， **不论如何， 请学会刷题**，这是一项重要的技能，现实世界中，人的精力有限，没那么重要的课，就用刷题代替钻研。
+* 重课通常会耗费我们一周大多数的时间，在每个夜晚对这些核心孜孜不倦的研究，构成了我们对计算机本质最深刻的理解，这是我们，作为计算机科班出生，所获得的核心竞争力。
 
-**而在适应节奏后也还好**。每周写个大几百行代码，基本能够应付大多数的课程，几门重课基本上也就是在最紧张的时候，通宵个几次就好了。当然这种通宵的情况，对于大佬们来说，不一定会有，如果你看到大佬们在通宵，那一定是在做更多的优化，探索更多更深入的内容。
+每周写个大几百行代码，基本能够应付大多数的课程，几门重课基本上也就是在最紧张的时候，通宵个几次就好了。当然这种通宵的情况，对于大佬们来说，不一定会有，如果你看到大佬们在通宵，那一定是在做更多的优化，探索更多更深入的内容。
 
 **想在北航计算机系过的相对轻松，并不难。**
 
-**健康活着最重要， 永远存在别的选择， 不用非要在GPA上死磕。安排好时间，是可以平衡学习和生活锻炼的。**
-
-
-
-
-
+**健康活着最重要， 永远存在别的选择， 不用非要在GPA上死磕。安排好时间，是可以平衡学习和生活的。**
