--- a/北航记忆/恶心事.md
+++ b/北航记忆/恶心事.md
@@ -1,12 +1,5 @@
----
-description: '教务，后勤，老师, 住宿，食堂，whatever'
----
-
 # 恶心事
 
+> 有待提高的
+
 1. [如何评价_北航_本校升学生_返校_前一天才出宿舍安排且违背了宿舍自由组合的许诺？](https://www.zhihu.com/question/416783730/answer/1427465787)
-
-
-
-
-
