--- a/发展路径/出国党.md
+++ b/发展路径/出国党.md
@@ -1,6 +1,3 @@
----
-description: asdf
----
 # 出国-什么党？
 
 * 为何出国
@@ -10,4 +7,4 @@ description: asdf
 * 国外生活经验
 * ...
 
-[北大飞跃手册](http://www.qianmu.org/u/file/%E5%8C%97%E5%A4%A7%E9%A3%9E%E8%B7%83%E6%89%8B%E5%86%8C.pdf)
+看[北大飞跃手册](http://www.qianmu.org/u/file/%E5%8C%97%E5%A4%A7%E9%A3%9E%E8%B7%83%E6%89%8B%E5%86%8C.pdf)吧，非常详细了。
