--- a/一份书单.md
+++ b/一份书单.md
@@ -1,11 +1,7 @@
----
-description: 如果你觉得教材不那么好，那么也许可以选择些别的
----
-
 # 一份书单
 
 ```text
-Learn enough tech to be dangerous
+Learn enough to be dangerous
 ```
 
 ### 一、计算机本科学习
@@ -27,6 +23,8 @@ Learn enough tech to be dangerous
 **设计模式**
 
 * 《大话设计模式》很通俗易懂，入门用
+* 《Code Complete》又叫做代码大全，非常有帮助
+* 《架构整洁之道》算是神书之一，对架构理解非常有帮助
 * 《设计模式：可复用面向对象软件的基础》
 * 《编程珠玑》
 
@@ -90,8 +88,8 @@ Learn enough tech to be dangerous
 
 #### 8.ACM算法竞赛
 
-* 《算法竞赛入门经典 刘汝佳》入门比较适合，不过ACM的代码基本都不工程化，学习到思想就好。
-* [ **练习、练习、不断地练习！**](https://zhuanlan.zhihu.com/p/139522195)\*\*\*\*
+* 《算法竞赛入门经典 刘汝佳》入门
+* [**练习、练习、不断地练习！**](https://zhuanlan.zhihu.com/p/139522195)
 * Leetcode
 * 洛谷
 * codeforce
@@ -99,34 +97,24 @@ Learn enough tech to be dangerous
 
 #### 9.信息安全
 
-> 江湖上仍然流传着他们的传说
-
-可以看一看一些公众号文章入门，[https://zhuanlan.zhihu.com/p/39508502](https://zhuanlan.zhihu.com/p/39508502)， 感受一下技术的美感
-
 * CTF竞赛, 靶场
-  * see [https://www.zhihu.com/question/406929241/answer/1364968559](https://www.zhihu.com/question/406929241/answer/1364968559)
+  * [https://www.zhihu.com/question/406929241/answer/1364968559](https://www.zhihu.com/question/406929241/answer/1364968559)
   * [CTF time](https://ctftime.org/) 全球CTF战队排名
 * 密码学
 * [吾爱破解论坛](https://www.52pojie.cn/)
 * 反汇编 ida pro
 * [how to become a hacker](http://www.catb.org/~esr/faqs/hacker-howto.html)
-* 最佳工具 [kali-linux](https://www.kali.org/downloads/)
+* [kali-linux](https://www.kali.org/downloads/)
 
 ### 10. 编程语言学习
 
 **C language**
 
-* 黑C: 《C程序设计语言》
-* P.S 不要读谭浩强，不适合专业人员
+* 黑C: 《C程序设计语言》不是唐浩强那本
 
 **python**
 
-* 《Python Cookbook（第 3 版）中文版》
-* Alex Martelli 的《Python 技术手册（第 2 版）》
-* David Beazley 的《Python 参考手册（第 4 版）》
-* 《python学习手册》有点庞杂，用来做工具书备查比较合适
 * 推荐先看 廖雪峰的教程，菜鸟教程快速上手。
-* 《精通Python设计模式》
 * 《流畅的python》推荐在有一定python基础和实践后阅读，比较多和解释器直接交互的部分，和Java的反射机制有点类似。
 
 **Java**
@@ -140,10 +128,10 @@ Learn enough tech to be dangerous
 
 **Objective-C**
 
-*  《objective-C编程》
-*  《深入理解MacOSX&iOS操作系统》
-*  《Effective objective-C》
-*  《iOS编程(第四版)》
+* 《objective-C编程》
+* 《深入理解MacOSX&iOS操作系统》
+* 《Effective objective-C》
+* 《iOS编程(第四版)》
 
 **ruby 小众**
 
@@ -161,13 +149,9 @@ Learn enough tech to be dangerous
 * 课程，[吴恩达 深度学习](https://www.coursera.org/specializations/deep-learning), bilibili上有中文字幕, 零基础教学
 * 课程, [李飞飞 CS231n](http://cs231n.stanford.edu/) 计算机视觉
 * 深度学习框架： 首选 pytorch, 其次 tensorflow, 然后MXNET，未来可能oneflow
-* 论文列表：
-
-  在GitHub上，一般，收集好的项目的代码仓库，都会冠以awesome的前缀, like:
-
-  * [awesome object detection](https://github.com/amusi/awesome-object-detection)
-
+* [awesome object detection](https://github.com/amusi/awesome-object-detection)
 * 动手教程：
+
   * [pytorch 官方教程](https://pytorch.org/tutorials/)
   * [动手学深度学习](https://github.com/ShusenTang/Dive-into-DL-PyTorch)
 * [《可解释的机器学习》](https://github.com/MingchaoZhu/InterpretableMLBook)
@@ -175,19 +159,20 @@ Learn enough tech to be dangerous
 #### 杂书
 
 * 自控力
+* 打造Faceboo
 * 黑客与画家
+* 被讨厌的勇气：阿德勒心理学，对人际关系非常有指导意义
 * 哈佛大学: **积极心理学**，公开课，又称作&lt;幸福课&gt;， 学会如何变得更加快乐，很推荐。
 * 中国哲学史 冯友兰
 * 影响力 罗伯特•B•西奥迪尼
 * 与原生家庭和解，爱丽丝.米勒
-* 打造Facebook：强推
 
 ### 三、好用的工具
 
 1. Typora 最好看舒服的markdown书写工具，写文档必备
 2. Tmux 非常方便的终端复用工具，在远程主机维持一个服务，可断线重连
-3. Vim 懂的都懂，有时间配置的话，不输任何IDE, powerline
-4. git 因为太重要，所以放在这里, [Git权威指南中文手册](http://iissnan.com/progit/html/zh/ch1_0.html)
+3. Vim 服务端用到比较多
+4. git  [Git权威指南中文手册](http://iissnan.com/progit/html/zh/ch1_0.html)
 
 ### Them
 
@@ -198,7 +183,7 @@ Learn enough tech to be dangerous
 * 乔明达
 * 戴文渊
 * 唐文斌
-*  **Jure Leskovec**
+* **Jure Leskovec**
 
 ### 开源书单
 
