--- a/发展路径/就业党.md
+++ b/发展路径/就业党.md
@@ -1,7 +1,3 @@
----
-description: 那就捞呗
----
-
 # 就业-捞钱党
 
 * 开发 or 算法 or 前端 or 后端 or 管理 or 技术
@@ -12,30 +8,18 @@ description: 那就捞呗
 
 注意，包含主观看法，请批判阅读
 
-**就业，去大厂。**
+### 就业，去大厂。
 
-在小公司， 我们北航计算机的，基本上都是大佬。得益于对于计算机本质的理解，我们解决问题的速度是很多半路出家的同学的数倍，因此我们去任何一家小公司基本上都会得到优待。但是不要被小公司的糖衣炮弹🐯住了，除非你真的已经非常强，技术上没有更多追求，一个人能顶十个，并且乐意去创业，那么没有问题，但是如果你希望自己的技术得到增长，那么利用好我们应届生的身份，找一个大厂，先耕耘个几年，把码力堆上来，然后再去小公司享受薪资加倍、披荆斩棘的快乐吧。\(以及，如果运气不好，就会被各种各样的事情恶心到\)
-
-**去大厂， 先刷题。**
+> 没有特殊理由，大厂仍是首选。
 
 把**算法题**刷够哈， **计算机基础**也背背。
 
-算法题其实完全不用畏难，都是套路。即便完全看着答案copy，先刷几十道，肯定就会有感觉，大概刷到100+的时候，会有一定把握。基本上刷到两三百题，能够到达一个大厂的基本准入门槛。
-
-**简历**很重要，**心态**放平和。
-
-Reference：
+1. 算法题其实完全不用畏难，都是套路。即便完全看着答案copy，先刷几十道，肯定就会有感觉，大概刷到100+的时候，会有一定把握。基本上刷到两三百题，能够到达一个大厂的基本准入门槛。
+2. **简历**很重要，**心态**放平和。
+3. 参考题解
 
 * [leetcode](https://leetcode-cn.com/) 有优质的题目和题解
 * [牛客网](https://www.nowcoder.com/) 有优质的面试经验和大量内推机会，部分大厂会直接在牛客网进行面试，比如字节、商汤。
-* 优质的刷题笔记
-  * [https://github.com/labuladong/fucking-algorithm](https://github.com/labuladong/fucking-algorithm)
+* * [https://github.com/labuladong/fucking-algorithm](https://github.com/labuladong/fucking-algorithm)
   * [https://github.com/changgyhub/leetcode\_101](https://github.com/changgyhub/leetcode_101)
 * [CS-NOTE](http://www.cyc2018.xyz/)
-
-
-
-
-
-
-
