feat(tool): update docs > 每次都重新build有点麻烦，TODO: 看看webhook能不能做这个事情

--- a/发展路径/就业党.md
+++ b/发展路径/就业党.md
@@ -6,8 +6,6 @@
 * 技术推荐 + 书籍推荐
 * 兼职途径
 
-注意，包含主观看法，请批判阅读
-
 ### 就业，去大厂。
 
 > 没有特殊理由，大厂仍是首选。
@@ -16,10 +14,11 @@
 
 1. 算法题其实完全不用畏难，都是套路。即便完全看着答案copy，先刷几十道，肯定就会有感觉，大概刷到100+的时候，会有一定把握。基本上刷到两三百题，能够到达一个大厂的基本准入门槛。
 2. **简历**很重要，**心态**放平和。
-3. 参考题解
+3. 参考题解 | [leetcode](https://leetcode-cn.com/) | [牛客网](https://www.nowcoder.com/) | [funcking-algorithm](https://github.com/labuladong/fucking-algorithm) | [leetcode\_101](https://github.com/changgyhub/leetcode_101) | [CS-NOTE](http://www.cyc2018.xyz/)
 
-* [leetcode](https://leetcode-cn.com/) 有优质的题目和题解
-* [牛客网](https://www.nowcoder.com/) 有优质的面试经验和大量内推机会，部分大厂会直接在牛客网进行面试，比如字节、商汤。
-* * [https://github.com/labuladong/fucking-algorithm](https://github.com/labuladong/fucking-algorithm)
-  * [https://github.com/changgyhub/leetcode\_101](https://github.com/changgyhub/leetcode_101)
-* [CS-NOTE](http://www.cyc2018.xyz/)
+### 就业的局势
+
+1. 绝大多数情况下，北航计算机学院的背景，每个组都是抢着要的。不论是国内大厂(BAT)，还是外企(Amazon)
+2. 笔试题只是一道门槛，多刷题一定能过，背景好的话，一般会放点水
+3. 就业后，你依然是优秀的。组内可能会有清北同学，但大多数情况下北邮、北航、电子科大、华中科技，或者别的学校的居多。就业后，能够给你提供指导的人，依然不多，老同事或者上级，能够给你提供的是很多参考。最终，还是要自己摸索出自己的道路。
+4. 应届生校招在大厂一般会有一笔签字费。
